@@ -139,16 +139,16 @@ public final class HeaderUtil {
   private static Map<String, String> parseHeadersToMap(HttpHeaders headers,
       Predicate<String> matcher) {
     return headers
-        .entrySet()
+        .headerSet()
         .stream()
         .map(
             entry -> {
               if (matcher.test(entry.getKey())
                   && entry.getValue() != null
                   && !entry.getValue().isEmpty()) {
-                String value = entry.getValue().get(0);
+                String value = entry.getValue().getFirst();
                 if (value != null && !value.isBlank()) {
-                  return new SimpleEntry<>(entry.getKey(), entry.getValue().get(0));
+                  return new SimpleEntry<>(entry.getKey(), entry.getValue().getFirst());
                 } else {
                   return null;
                 }
@@ -235,17 +235,17 @@ public final class HeaderUtil {
 
   @Nullable
   public static ChecksumAlgorithm checksumAlgorithmFromHeader(HttpHeaders headers) {
-    if (headers.containsKey(X_AMZ_CHECKSUM_SHA256)) {
+    if (headers.containsHeader(X_AMZ_CHECKSUM_SHA256)) {
       return ChecksumAlgorithm.SHA256;
-    } else if (headers.containsKey(X_AMZ_CHECKSUM_SHA1)) {
+    } else if (headers.containsHeader(X_AMZ_CHECKSUM_SHA1)) {
       return ChecksumAlgorithm.SHA1;
-    } else if (headers.containsKey(X_AMZ_CHECKSUM_CRC32)) {
+    } else if (headers.containsHeader(X_AMZ_CHECKSUM_CRC32)) {
       return ChecksumAlgorithm.CRC32;
-    } else if (headers.containsKey(X_AMZ_CHECKSUM_CRC32C)) {
+    } else if (headers.containsHeader(X_AMZ_CHECKSUM_CRC32C)) {
       return ChecksumAlgorithm.CRC32C;
-    } else if (headers.containsKey(X_AMZ_CHECKSUM_CRC64NVME)) {
+    } else if (headers.containsHeader(X_AMZ_CHECKSUM_CRC64NVME)) {
       return ChecksumAlgorithm.CRC64NVME;
-    } else if (headers.containsKey(X_AMZ_CHECKSUM_ALGORITHM)) {
+    } else if (headers.containsHeader(X_AMZ_CHECKSUM_ALGORITHM)) {
       var checksumAlgorithm = headers.getFirst(X_AMZ_CHECKSUM_ALGORITHM);
       return ChecksumAlgorithm.fromString(checksumAlgorithm);
     } else {
@@ -255,7 +255,7 @@ public final class HeaderUtil {
 
   @Nullable
   public static ChecksumAlgorithm checksumAlgorithmFromSdk(HttpHeaders headers) {
-    if (headers.containsKey(X_AMZ_SDK_CHECKSUM_ALGORITHM)) {
+    if (headers.containsHeader(X_AMZ_SDK_CHECKSUM_ALGORITHM)) {
       return ChecksumAlgorithm.fromString(headers.getFirst(X_AMZ_SDK_CHECKSUM_ALGORITHM));
     } else {
       return null;
@@ -264,15 +264,15 @@ public final class HeaderUtil {
 
   @Nullable
   public static String checksumFrom(HttpHeaders headers) {
-    if (headers.containsKey(X_AMZ_CHECKSUM_SHA256)) {
+    if (headers.containsHeader(X_AMZ_CHECKSUM_SHA256)) {
       return headers.getFirst(X_AMZ_CHECKSUM_SHA256);
-    } else if (headers.containsKey(X_AMZ_CHECKSUM_SHA1)) {
+    } else if (headers.containsHeader(X_AMZ_CHECKSUM_SHA1)) {
       return headers.getFirst(X_AMZ_CHECKSUM_SHA1);
-    } else if (headers.containsKey(X_AMZ_CHECKSUM_CRC32)) {
+    } else if (headers.containsHeader(X_AMZ_CHECKSUM_CRC32)) {
       return headers.getFirst(X_AMZ_CHECKSUM_CRC32);
-    } else if (headers.containsKey(X_AMZ_CHECKSUM_CRC32C)) {
+    } else if (headers.containsHeader(X_AMZ_CHECKSUM_CRC32C)) {
       return headers.getFirst(X_AMZ_CHECKSUM_CRC32C);
-    } else if (headers.containsKey(X_AMZ_CHECKSUM_CRC64NVME)) {
+    } else if (headers.containsHeader(X_AMZ_CHECKSUM_CRC64NVME)) {
       return headers.getFirst(X_AMZ_CHECKSUM_CRC64NVME);
     }
     return null;
